--- a/app/views/states/show.html.erb
+++ b/app/views/states/show.html.erb
@@ -6,8 +6,8 @@
 </p>
 
 <p>
-  <strong>Acronym:</strong>
-  <%= @state.acronym %>
+  <strong>State acronym:</strong>
+  <%= @state.state_acronym %>
 </p>
 
 <%= link_to 'Edit', edit_state_path(@state) %> |
