--- a/app/views/states/_form.html.erb
+++ b/app/views/states/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :acronym %>
-    <%= form.text_field :acronym %>
+    <%= form.label :state_acronym %>
+    <%= form.text_field :state_acronym %>
   </div>
 
   <div class="actions">
